some css and logo stuff... file handler

--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,6 +1,7 @@
 {{define "nav"}}
  <nav>
     <a href='/'>Home</a>
-    <a href='/snippet/view/1'>snippets</a>
+    <a href='/snippet/create'>Create snippets</a>
+    <a href='/snippet/view/1'>View snippets</a>
 </nav>
 {{end}}
