this is just me messing around with nothing really

--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -2,6 +2,6 @@
  <nav>
     <a href='/'>Home</a>
     <a href='/snippet/create'>Create snippets</a>
-    <a href='/snippet/view/1'>View snippets</a>
+    <a href='/snippet/view/'>View snippets</a>
 </nav>
 {{end}}
