--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,7 +1,7 @@
 {{define "nav"}}
  <nav>
     <a href='/'>Home</a>
-    <a href='/snippet/create'>Create snippets</a>
-    <a href='/snippet/view/'>View snippets</a>
+    <!-- Add a link to the new form -->
+    <a href='/snippet/create'>Create snippet</a>
 </nav>
 {{end}}
